FastAPI-application/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
        - name: fastapi-container
          image: varuntej2480/backend-svc:latest # or your-dockerhub-username/fastapi-app:latest
          ports:
            - containerPort: 8000
